--- a/side_bar.html
+++ b/side_bar.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>side_navigation bar</title>
     <style>
+        /* you can use external sheet */
         body{
             padding: 0px;
             margin: 0px;
@@ -50,6 +51,7 @@
     
 </body>
 <script>
+    // you can use external sheet 
     function myopen(){
         document.getElementById("sidenav").style.left = "0px";
 
